your message about what you changed

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BTscan</title>
-    <link rel="icon" type="image/png" href="/unnamed.png" />
+    <title>WALEXSCAN</title>
+    <link rel="icon" type="image/png" href="/download.png" />
 
     
 
-    <meta property="og:title" content="pent-flow-hub" />
+    <meta property="og:title" content="WALEXSCAN" />
 
   </head>
 
